--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,3 +1,19 @@
-env/
-.venv/
+# Python
 __pycache__/
+*.pyc
+*.pyo
+
+# Virtual environments
+env/
+venv/
+.venv/
+
+# Environment variables
+.env
+
+# Flask
+instance/
+*.sqlite3
+
+# OS
+.DS_Store
