--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,19 @@
-/env
-__pycache__
+# Python
+__pycache__/
+*.pyc
+*.pyo
+
+# Virtual environments
+env/
+venv/
+.venv/
+
+# Environment variables
 .env
 
-/node_modules
+# Flask
+instance/
+*.sqlite3
+
+# OS
+.DS_Store
